# busy-bee

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
busybee/contracts/: models.py
busybee/data/: splitting.py
busybee/data/ingestion/: synthetic.py
busybee/data/validation/: checks.py
busybee/evaluation/: artifact.py  metrics.py  report.py
busybee/features/: transforms.py
busybee/feedback/: store.py
busybee/foundation/: config.py  context.py  exceptions.py  logging_utils.py  paths.py
busybee/inference/: loader.py  predict.py
busybee/interfaces/: cli.py
busybee/ml/: __init__.py  models.py
busybee/models/: baseline.py
busybee/orchestration/: runner.py
busybee/training/: pipelines.py  trainer.py
config/: base.yaml
docs/: achievements_leaderboard_rls.sql  auth_configuration.sql  busybee_complete_schema.sql  busybee_database_schema.sql  expanded_rls_policies.sql  level_system.sql  storage_and_indexes.sql
docs/architecture/: doctrine_gap_analysis_matrix.md  sacred_systems_doctrine_v1_1.md
docs/ml_deep_dive/: finance.md
frontend/: .env.local.example  README.md  package.json
frontend/context/: AuthContext.js
frontend/pages/: _app.js  dashboard.js  index.js  login.js
frontend/pages/health/: index.js
scripts/: evaluate.py  setup_supabase.py  train.py
tests/integration/: test_training_cycle.py
tests/unit/: test_data_validation.py  test_inference.py  test_training_pipeline.py
