[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "busybee"
version = "0.2.0"
description = "Doctrine-driven ML starter system with explicit contracts, identity, and feedback loops"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "joblib>=1.3"
]
authors = [{ name = "OpenAI" }]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0"
]

[project.scripts]
busybee = "busybee.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["busybee*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
